--- a/templates/productos.html
+++ b/templates/productos.html
@@ -1,1 +1,26 @@
+{% extends "base.html" %}
 
+{% block title %}Productos{% endblock %}
+
+{% block content %}
+<h2>Productos</h2>
+
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Tipo</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for producto in productos %}
+        <tr>
+            <td>{{ producto.id }}</td>
+            <td>{{ producto.nombre }}</td>
+            <td>{{ producto.tipo }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% endblock %}
